# phd

./: .gitignore  README-Copy1.ipynb  README.ipynb  README.md  jupyter_config.py  pm_bptb.csv  pm_plt.csv  pm_qt.csv  pm_ta.csv  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.ipynb  README-checkpoint.md  nma-checkpoint.csv  pyproject-checkpoint.toml
data/: achilles.csv  co_at.txt  co_bptb.csv  co_ht.csv  co_ht.txt  co_plt.csv  co_plt.txt  co_qt.csv  co_qt.txt  co_ta.csv  cochrane.csv  cochrane_at.txt  cochrane_bptb.csv  cochrane_bptb.txt  cochrane_ht.csv  cochrane_ht.txt  cochrane_plt.txt  cochrane_qt.txt  cochrane_ta.txt  em_at.csv  em_at.txt  em_bptb.csv  em_bptb.txt  em_ht.csv  em_ht.txt  em_plt.csv  em_plt.txt  em_qt.csv  em_qt.txt  em_ta.csv  em_ta.txt  embase.csv  full_text_screening.csv  hamstring.csv  patellar.csv  peroneus.csv  pm_at.csv  pm_at.txt  pm_bptb.csv  pm_bptb.txt  (+25 more)
data/.archive/: em_ta.csv  wos_at.tsv  wos_bptb.tsv  wos_ht.tsv  wos_plt.tsv  wos_qt.tsv  wos_ta.tsv
data/.ipynb_checkpoints/: achilles-checkpoint.csv  cochrane-checkpoint.csv  cochrane_at-checkpoint.txt  cochrane_bptb-checkpoint.txt  cochrane_ht-checkpoint.txt  cochrane_plt-checkpoint.txt  cochrane_qt-checkpoint.txt  cochrane_ta-checkpoint.csv  cochrane_ta-checkpoint.txt  em_at-checkpoint.txt  em_bptb-checkpoint.csv  (+12 more)
docs/: index.md
notebooks/: full_text_screening.ipynb  notebooks.md  search.ipynb  search_strategy.ipynb  title_abstract_screening.ipynb  title_abstract_screening.py
project/: index.md
src/: __init__.py  badges.py  custom_scripts.py
(+27 files in other folders)
